fix scroll jump

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,7 @@ button {
   background-color: #7a8d9b;
   display: none;
 }
-#journal:target {
+#journal.active {
   display: flex;
 }
 #fish-list, #fish-details {
